welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: Missing closing brace `}' assumed here
def hunt() {
^SlugHunting:2: error: expected class or object definition
def hunt() {
^SlugHunting:18: error: Missing closing brace `}' assumed here
}
^