welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  while (estSurBiscuit()==false){
    if (estFaceMur()==false){
      avance()
      if (getCouleurSol()==Color.green){
           recule()
           baisseBrosse()
           leveBrosse()
           return true
         }
         else {
          recule()
          return false
       }}
    